--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
             <li class="item"><a href="" class="link">Contacts</a></li>
           </ul>
         </nav>
+        <button
+          type="button"
+          class="mobile-menu-open js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="mobile-menu-open-icon" width="32" height="22">
+            <use href="./images/icons.svg#menu-burger"></use>
+          </svg>
+        </button>
         <!-- contacts -->
         <ul class="contacts list">
           <li class="item">
@@ -49,20 +59,108 @@
           </li>
         </ul>
       </div>
+      <!-- mobile menu -->
+      <div class="mobile-menu js-menu-container">
+        <button
+          type="button"
+          class="mobile-menu-close js-close-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="mobile-menu-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#close-black"></use>
+          </svg>
+        </button>
+        <ul class="mobile-menu-site-nav list">
+          <li class="mobile-menu-item">
+            <a href="./index.html" class="link">Studio</a>
+          </li>
+          <li class="mobile-menu-item">
+            <a href="./portfolio.html" class="link">Portfolio</a>
+          </li>
+          <li class="mobile-menu-item"><a href="" class="link">Contacts</a></li>
+        </ul>
+        <div class="mobile-menu-list">
+          <ul class="mobile-menu-contacts list">
+            <li class="item">
+              <a href="tel:+110001111111" class="contact"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="contact"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="mobile-menu-social-list list">
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg
+                  aria-label="instagram"
+                  class="social-icon"
+                  width="16"
+                  height="16"
+                >
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg
+                  aria-label="twitter"
+                  class="social-icon"
+                  width="16"
+                  height="16"
+                >
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg
+                  aria-label="facebook"
+                  class="social-icon"
+                  width="16"
+                  height="16"
+                >
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg
+                  aria-label="linkedin"
+                  class="social-icon"
+                  width="16"
+                  height="16"
+                >
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
+
     <!-- main content -->
     <main>
       <!-- hero -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="conteiner">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button primary" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
+
       <!-- list of features -->
-      <section class="section-feature">
+      <!-- <section class="section-feature">
         <div class="conteiner">
           <h2 class="visually-hidden">List of features</h2>
           <ul class="feature list">
@@ -116,9 +214,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+
       <!-- wot we do -->
-      <section class="section-doing">
+      <!-- <section class="section-doing">
         <div class="conteiner">
           <h2 class="section-page">What are we doing</h2>
           <ul class="work list">
@@ -148,9 +247,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+
       <!-- our team -->
-      <section class="our-team">
+      <!-- <section class="our-team">
         <div class="conteiner">
           <h2 class="section-page">Our Team</h2>
           <ul class="team list">
@@ -404,9 +504,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+
       <!-- Customers -->
-      <section class="customers">
+      <!-- <section class="customers">
         <div class="conteiner">
           <h2 class="customers-peage">Customers</h2>
           <ul class="customers-list list">
@@ -454,10 +555,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
+
     <!-- footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="conteiner footer-box">
         <div class="logo-footer-box">
           <a href="/" class="logo"> <span class="logo-web">Web</span>Studio </a>
@@ -635,7 +737,7 @@
           <button type="submit" class="send-button">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./JS/modal.js"></script>
 
     <script
