--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- site header -->
     <header class="header">
       <!-- navigation -->
-      <div class="conteiner main-nav">
+      <div class="conteiner main-navigation">
         <nav class="main-nav">
           <!-- logo -->
           <a href="./index.html" class="logo">
@@ -82,61 +82,61 @@
         </ul>
         <div class="mobile-menu-list">
           <ul class="mobile-menu-contacts list">
-            <li class="item">
-              <a href="tel:+110001111111" class="contact"
+            <li class="mobile-menu-tel-item">
+              <a href="tel:+110001111111" class="contact-tel"
                 >+11 (000) 111-11-11</a
               >
             </li>
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="contact"
+            <li class="mobile-menu-mail-item">
+              <a href="mailto:info@devstudio.com" class="contact-mail"
                 >info@devstudio.com</a
               >
             </li>
           </ul>
           <ul class="mobile-menu-social-list list">
             <li class="social-item">
-              <a href="" class="social-link">
+              <a href="" class="mobile-menu-social-link">
                 <svg
                   aria-label="instagram"
-                  class="social-icon"
-                  width="16"
-                  height="16"
+                  class="mobile-menu-social-icon"
+                  width="24"
+                  height="24"
                 >
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a href="" class="social-link">
+              <a href="" class="mobile-menu-social-link">
                 <svg
                   aria-label="twitter"
-                  class="social-icon"
-                  width="16"
-                  height="16"
+                  class="mobile-menu-social-icon"
+                  width="24"
+                  height="24"
                 >
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a href="" class="social-link">
+              <a href="" class="mobile-menu-social-link">
                 <svg
                   aria-label="facebook"
-                  class="social-icon"
-                  width="16"
-                  height="16"
+                  class="mobile-menu-social-icon"
+                  width="24"
+                  height="24"
                 >
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a href="" class="social-link">
+              <a href="" class="mobile-menu-social-link">
                 <svg
                   aria-label="linkedin"
-                  class="social-icon"
-                  width="16"
-                  height="16"
+                  class="mobile-menu-social-icon"
+                  width="24"
+                  height="24"
                 >
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
@@ -150,14 +150,14 @@
     <!-- main content -->
     <main>
       <!-- hero -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="conteiner">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button primary" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!-- list of features -->
       <!-- <section class="section-feature">
@@ -646,7 +646,8 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
+    <!-- Backdrop and modal -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="button-close" data-modal-close>
@@ -737,7 +738,7 @@
           <button type="submit" class="send-button">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./JS/modal.js"></script>
 
     <script
