--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </section>
 
       <!-- list of features -->
-      <!-- <section class="section-feature">
+      <section class="section-feature">
         <div class="conteiner">
           <h2 class="visually-hidden">List of features</h2>
           <ul class="feature list">
@@ -214,7 +214,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- wot we do -->
       <!-- <section class="section-doing">
