--- a/index.html
+++ b/index.html
@@ -217,12 +217,13 @@
       </section>
 
       <!-- wot we do -->
-      <!-- <section class="section-doing">
+      <section class="section-doing">
         <div class="conteiner">
           <h2 class="section-page">What are we doing</h2>
           <ul class="work list">
             <li class="item">
               <img
+                srcset="./images/img-1@2x.jpg 2x"
                 src="./images/img-1.jpg"
                 alt="Laptop applications"
                 width="360"
@@ -231,6 +232,7 @@
             </li>
             <li class="item">
               <img
+                srcset="./images/img-2@2x.jpg 2x"
                 src="./images/img-2.jpg"
                 alt="Smartphone applications"
                 width="360"
@@ -239,6 +241,7 @@
             </li>
             <li class="item">
               <img
+                srcset="./images/img-3@2x.jpg 2x"
                 src="./images/img-3.jpg"
                 alt="Web design"
                 width="360"
@@ -247,10 +250,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- our team -->
-      <!-- <section class="our-team">
+      <section class="our-team">
         <div class="conteiner">
           <h2 class="section-page">Our Team</h2>
           <ul class="team list">
@@ -504,7 +507,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Customers -->
       <!-- <section class="customers">
@@ -747,6 +750,6 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script defer src="js/mobile-menu.js"></script>
+    <script defer src="./JS/mobile-menu.js"></script>
   </body>
 </html>
