--- a/index.html
+++ b/index.html
@@ -254,11 +254,12 @@
 
       <!-- our team -->
       <section class="our-team">
-        <div class="conteiner">
+        <div class="conteiner cont">
           <h2 class="section-page">Our Team</h2>
           <ul class="team list">
             <li class="item-foto">
               <img
+                srcset="./images/foto-1@2x.jpg 2x"
                 src="./images/foto-1.jpg"
                 alt="foto Mark Guerrero"
                 width="264"
@@ -321,6 +322,7 @@
             </li>
             <li class="item-foto">
               <img
+                srcset="./images/foto-2@2x.jpg 2x"
                 src="./images/foto-2.jpg"
                 alt="foto Tom Ford"
                 width="264"
@@ -383,6 +385,7 @@
             </li>
             <li class="item-foto">
               <img
+                srcset="./images/foto-3@2x.jpg 2x"
                 src="./images/foto-3.jpg"
                 alt="foto Camila Garcia"
                 width="264"
@@ -445,6 +448,7 @@
             </li>
             <li class="item-foto">
               <img
+                srcset="./images/foto-4@2x.jpg 2x"
                 src="./images/foto-4.jpg"
                 alt="foto Daniel Wilson"
                 width="264"
@@ -510,7 +514,7 @@
       </section>
 
       <!-- Customers -->
-      <!-- <section class="customers">
+      <section class="customers">
         <div class="conteiner">
           <h2 class="customers-peage">Customers</h2>
           <ul class="customers-list list">
@@ -558,7 +562,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- footer -->
