--- a/index.html
+++ b/index.html
@@ -525,35 +525,35 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-item">
               <a href="" class="customer-link">
                 <svg class="customer-logo" width="104" height="56">
                   <use href="./images/icons.svg#logo2"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-item">
               <a href="" class="customer-link">
                 <svg class="customer-logo" width="104" height="56">
                   <use href="./images/icons.svg#logo3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-item">
               <a href="" class="customer-link">
                 <svg class="customer-logo" width="104" height="56">
                   <use href="./images/icons.svg#logo4"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-item">
               <a href="" class="customer-link">
                 <svg class="customer-logo" width="104" height="56">
                   <use href="./images/icons.svg#logo5"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-item">
               <a href="" class="customer-link">
                 <svg class="customer-logo" width="104" height="56">
                   <use href="./images/icons.svg#logo6"></use>
@@ -566,10 +566,12 @@
     </main>
 
     <!-- footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="conteiner footer-box">
         <div class="logo-footer-box">
-          <a href="/" class="logo"> <span class="logo-web">Web</span>Studio </a>
+          <a href="/" class="logo-footer">
+            <span class="logo-web">Web</span>Studio
+          </a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -653,7 +655,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- Backdrop and modal -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
