--- a/portfolio.html
+++ b/portfolio.html
@@ -21,20 +21,32 @@
     <!-- site header -->
     <header class="header">
       <!-- navigation -->
-      <div class="conteiner main-nav">
+      <div class="conteiner main-navigation">
         <nav class="main-nav">
           <!-- logo -->
           <a href="./index.html" class="logo">
             <span class="logo-web">Web</span>Studio
           </a>
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Studio</a></li>
+            <li class="item">
+              <a href="./index.html" class="link">Studio</a>
+            </li>
             <li class="item portfolio">
               <a href="./portfolio.html" class="link">Portfolio</a>
             </li>
             <li class="item"><a href="" class="link">Contacts</a></li>
           </ul>
         </nav>
+        <button
+          type="button"
+          class="mobile-menu-open js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="mobile-menu-open-icon" width="32" height="22">
+            <use href="./images/icons.svg#menu-burger"></use>
+          </svg>
+        </button>
         <!-- contacts -->
         <ul class="contacts list">
           <li class="item">
@@ -47,7 +59,94 @@
           </li>
         </ul>
       </div>
+      <!-- mobile menu -->
+      <div class="mobile-menu js-menu-container">
+        <button
+          type="button"
+          class="mobile-menu-close js-close-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="mobile-menu-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#close-black"></use>
+          </svg>
+        </button>
+        <ul class="mobile-menu-site-nav list">
+          <li class="mobile-menu-item">
+            <a href="./index.html" class="link">Studio</a>
+          </li>
+          <li class="mobile-menu-item">
+            <a href="./portfolio.html" class="link">Portfolio</a>
+          </li>
+          <li class="mobile-menu-item"><a href="" class="link">Contacts</a></li>
+        </ul>
+        <div class="mobile-menu-list">
+          <ul class="mobile-menu-contacts list">
+            <li class="mobile-menu-tel-item">
+              <a href="tel:+110001111111" class="contact-tel"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mobile-menu-mail-item">
+              <a href="mailto:info@devstudio.com" class="contact-mail"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="mobile-menu-social-list list">
+            <li class="social-item">
+              <a href="" class="mobile-menu-social-link">
+                <svg
+                  aria-label="instagram"
+                  class="mobile-menu-social-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="mobile-menu-social-link">
+                <svg
+                  aria-label="twitter"
+                  class="mobile-menu-social-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="mobile-menu-social-link">
+                <svg
+                  aria-label="facebook"
+                  class="mobile-menu-social-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="mobile-menu-social-link">
+                <svg
+                  aria-label="linkedin"
+                  class="mobile-menu-social-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
+
     <!-- main content -->
     <main>
       <section class="section-main">
@@ -286,11 +385,14 @@
         </div>
       </section>
     </main>
+
     <!-- footer -->
     <footer class="footer">
       <div class="conteiner footer-box">
         <div class="logo-footer-box">
-          <a href="/" class="logo"> <span class="logo-web">Web</span>Studio </a>
+          <a href="/" class="logo-footer">
+            <span class="logo-web">Web</span>Studio
+          </a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -375,5 +477,12 @@
         </div>
       </div>
     </footer>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./JS/mobile-menu.js"></script>
   </body>
 </html>
