--- a/portfolio.html
+++ b/portfolio.html
@@ -178,12 +178,33 @@
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
-                    <img
-                      src="./images/p-img-1.jpg"
-                      alt="an example of a banking app"
-                      width="360"
-                      height="300"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/img-desctop-1.jpg    1x,
+                          ./images/img-desctop-1@2x.jpg 2x
+                        "
+                        media="(min-width: 1200px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-tablet-1.jpg    1x,
+                          ./images/img-tablet-1@2x.jpg 2x
+                        "
+                        media="(min-width: 768px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-mobile-1.jpg    1x,
+                          ./images/img-mobile-1@2x.jpg 2x
+                        "
+                        media="(max-width: 767px)"
+                      />
+                      <img
+                        src="./images/img-desctop-1.jpg"
+                        alt="an example of a banking app"
+                      />
+                    </picture>
                     <p class="text-thumb">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -201,12 +222,33 @@
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
-                    <img
-                      src="./images/p-img-2.jpg"
-                      alt="example of cashless payment"
-                      width="360"
-                      height="300"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/img-desctop-2.jpg    1x,
+                          ./images/img-desctop-2@2x.jpg 2x
+                        "
+                        media="(min-width: 1200px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-tablet-2.jpg    1x,
+                          ./images/img-tablet-2@2x.jpg 2x
+                        "
+                        media="(min-width: 768px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-mobile-2.jpg    1x,
+                          ./images/img-mobile-2@2x.jpg 2x
+                        "
+                        media="(min-width: 320px)"
+                      />
+                      <img
+                        src="./images/img-desctop-2.jpg"
+                        alt="an example of a banking app"
+                      />
+                    </picture>
                     <p class="text-thumb">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -224,12 +266,33 @@
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
-                    <img
-                      src="./images/p-img-3.jpg"
-                      alt="an example of a meditation app"
-                      width="360"
-                      height="300"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/img-desctop-3.jpg    1x,
+                          ./images/img-desctop-3@2x.jpg 2x
+                        "
+                        media="(min-width: 1200px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-tablet-3.jpg    1x,
+                          ./images/img-tablet-3@2x.jpg 2x
+                        "
+                        media="(min-width: 768px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-mobile-3.jpg    1x,
+                          ./images/img-mobile-3@2x.jpg 2x
+                        "
+                        media="(min-width: 320px)"
+                      />
+                      <img
+                        src="./images/img-desctop-3.jpg"
+                        alt="an example of a banking app"
+                      />
+                    </picture>
                     <p class="text-thumb">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -247,12 +310,33 @@
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
-                    <img
-                      src="./images/p-img-4.jpg"
-                      alt="an example of a taxi service"
-                      width="360"
-                      height="300"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/img-desctop-4.jpg    1x,
+                          ./images/img-desctop-4@2x.jpg 2x
+                        "
+                        media="(min-width: 1200px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-tablet-4.jpg    1x,
+                          ./images/img-tablet-4@2x.jpg 2x
+                        "
+                        media="(min-width: 768px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-mobile-4.jpg    1x,
+                          ./images/img-mobile-4@2x.jpg 2x
+                        "
+                        media="(min-width: 320px)"
+                      />
+                      <img
+                        src="./images/img-desctop-4.jpg"
+                        alt="an example of a banking app"
+                      />
+                    </picture>
                     <p class="text-thumb">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -270,12 +354,33 @@
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
-                    <img
-                      src="./images/p-img-5.jpg"
-                      alt="an example of phone screen design"
-                      width="360"
-                      height="300"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/img-desctop-5.jpg    1x,
+                          ./images/img-desctop-5@2x.jpg 2x
+                        "
+                        media="(min-width: 1200px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-tablet-5.jpg    1x,
+                          ./images/img-tablet-5@2x.jpg 2x
+                        "
+                        media="(min-width: 768px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-mobile-5.jpg    1x,
+                          ./images/img-mobile-5@2x.jpg 2x
+                        "
+                        media="(min-width: 320px)"
+                      />
+                      <img
+                        src="./images/img-desctop-5.jpg"
+                        alt="an example of a banking app"
+                      />
+                    </picture>
                     <p class="text-thumb">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -293,12 +398,33 @@
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
-                    <img
-                      src="./images/p-img-6.jpg"
-                      alt="girl with headphones and phone"
-                      width="360"
-                      height="300"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/img-desctop-6.jpg    1x,
+                          ./images/img-desctop-6@2x.jpg 2x
+                        "
+                        media="(min-width: 1200px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-tablet-6.jpg    1x,
+                          ./images/img-tablet-6@2x.jpg 2x
+                        "
+                        media="(min-width: 768px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-mobile-6.jpg    1x,
+                          ./images/img-mobile-6@2x.jpg 2x
+                        "
+                        media="(min-width: 320px)"
+                      />
+                      <img
+                        src="./images/img-desctop-6.jpg"
+                        alt="an example of a banking app"
+                      />
+                    </picture>
                     <p class="text-thumb">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -316,12 +442,33 @@
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
-                    <img
-                      src="./images/p-img-7.jpg"
-                      alt="an example of Instagram stories"
-                      width="360"
-                      height="300"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/img-desctop-7.jpg    1x,
+                          ./images/img-desctop-7@2x.jpg 2x
+                        "
+                        media="(min-width: 1200px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-tablet-7.jpg    1x,
+                          ./images/img-tablet-7@2x.jpg 2x
+                        "
+                        media="(min-width: 768px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-mobile-7.jpg    1x,
+                          ./images/img-mobile-7@2x.jpg 2x
+                        "
+                        media="(min-width: 320px)"
+                      />
+                      <img
+                        src="./images/img-desctop-7.jpg"
+                        alt="an example of a banking app"
+                      />
+                    </picture>
                     <p class="text-thumb">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -339,12 +486,33 @@
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
-                    <img
-                      src="./images/p-img-8.jpg"
-                      alt="vegetables and fruits in a bag"
-                      width="360"
-                      height="300"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/img-desctop-8.jpg    1x,
+                          ./images/img-desctop-8@2x.jpg 2x
+                        "
+                        media="(min-width: 1200px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-tablet-8.jpg    1x,
+                          ./images/img-tablet-8@2x.jpg 2x
+                        "
+                        media="(min-width: 768px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-mobile-8.jpg    1x,
+                          ./images/img-mobile-8@2x.jpg 2x
+                        "
+                        media="(min-width: 320px)"
+                      />
+                      <img
+                        src="./images/img-desctop-8.jpg"
+                        alt="an example of a banking app"
+                      />
+                    </picture>
                     <p class="text-thumb">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -362,12 +530,33 @@
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
-                    <img
-                      src="./images/p-img-9.jpg"
-                      alt="the barista makes coffee"
-                      width="360"
-                      height="300"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/img-desctop-9.jpg    1x,
+                          ./images/img-desctop-9@2x.jpg 2x
+                        "
+                        media="(min-width: 1200px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-tablet-9.jpg    1x,
+                          ./images/img-tablet-9@2x.jpg 2x
+                        "
+                        media="(min-width: 768px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/img-mobile-9.jpg    1x,
+                          ./images/img-mobile-9@2x.jpg 2x
+                        "
+                        media="(min-width: 320px)"
+                      />
+                      <img
+                        src="./images/img-desctop-9.jpg"
+                        alt="an example of a banking app"
+                      />
+                    </picture>
                     <p class="text-thumb">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
