--- a/portfolio.html
+++ b/portfolio.html
@@ -154,19 +154,19 @@
           <h1 class="visually-hidden">Portfolio</h1>
           <!-- filters -->
           <ul class="buttons list">
-            <li class="item">
+            <li class="btn-item">
               <button type="button" class="button secondary">All</button>
             </li>
-            <li class="item">
+            <li class="btn-item">
               <button type="button" class="button secondary">Web Site</button>
             </li>
-            <li class="item">
+            <li class="btn-item">
               <button type="button" class="button secondary">App</button>
             </li>
-            <li class="item">
+            <li class="btn-item">
               <button type="button" class="button secondary">Design</button>
             </li>
-            <li class="item">
+            <li class="btn-item">
               <button type="button" class="button secondary">Marketing</button>
             </li>
           </ul>
@@ -174,7 +174,7 @@
         <div class="conteiner">
           <!-- cards -->
           <ul class="cards list">
-            <li class="item">
+            <li class="item-card">
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
@@ -201,7 +201,7 @@
                         media="(max-width: 767px)"
                       />
                       <img
-                        src="./images/img-desctop-1.jpg"
+                        src="./images/img-mobile-1.jpg"
                         alt="an example of a banking app"
                       />
                     </picture>
@@ -218,7 +218,7 @@
                 </a>
               </article>
             </li>
-            <li class="item">
+            <li class="item-card">
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
@@ -245,7 +245,7 @@
                         media="(min-width: 320px)"
                       />
                       <img
-                        src="./images/img-desctop-2.jpg"
+                        src="./images/img-mobile-2.jpg"
                         alt="an example of a banking app"
                       />
                     </picture>
@@ -262,7 +262,7 @@
                 </a>
               </article>
             </li>
-            <li class="item">
+            <li class="item-card">
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
@@ -289,7 +289,7 @@
                         media="(min-width: 320px)"
                       />
                       <img
-                        src="./images/img-desctop-3.jpg"
+                        src="./images/img-mobile-3.jpg"
                         alt="an example of a banking app"
                       />
                     </picture>
@@ -306,7 +306,7 @@
                 </a>
               </article>
             </li>
-            <li class="item">
+            <li class="item-card">
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
@@ -333,7 +333,7 @@
                         media="(min-width: 320px)"
                       />
                       <img
-                        src="./images/img-desctop-4.jpg"
+                        src="./images/img-mobile-4.jpg"
                         alt="an example of a banking app"
                       />
                     </picture>
@@ -350,7 +350,7 @@
                 </a>
               </article>
             </li>
-            <li class="item">
+            <li class="item-card">
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
@@ -377,7 +377,7 @@
                         media="(min-width: 320px)"
                       />
                       <img
-                        src="./images/img-desctop-5.jpg"
+                        src="./images/img-mobile-5.jpg"
                         alt="an example of a banking app"
                       />
                     </picture>
@@ -394,7 +394,7 @@
                 </a>
               </article>
             </li>
-            <li class="item">
+            <li class="item-card">
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
@@ -421,7 +421,7 @@
                         media="(min-width: 320px)"
                       />
                       <img
-                        src="./images/img-desctop-6.jpg"
+                        src="./images/img-mobile-6.jpg"
                         alt="an example of a banking app"
                       />
                     </picture>
@@ -438,7 +438,7 @@
                 </a>
               </article>
             </li>
-            <li class="item">
+            <li class="item-card">
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
@@ -465,7 +465,7 @@
                         media="(min-width: 320px)"
                       />
                       <img
-                        src="./images/img-desctop-7.jpg"
+                        src="./images/img-mobile-7.jpg"
                         alt="an example of a banking app"
                       />
                     </picture>
@@ -482,7 +482,7 @@
                 </a>
               </article>
             </li>
-            <li class="item">
+            <li class="item-card">
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
@@ -509,7 +509,7 @@
                         media="(min-width: 320px)"
                       />
                       <img
-                        src="./images/img-desctop-8.jpg"
+                        src="./images/img-mobile-8.jpg"
                         alt="an example of a banking app"
                       />
                     </picture>
@@ -526,7 +526,7 @@
                 </a>
               </article>
             </li>
-            <li class="item">
+            <li class="item-card">
               <article class="article-card">
                 <a href="" class="link link-card">
                   <div class="card-thumb">
@@ -553,7 +553,7 @@
                         media="(min-width: 320px)"
                       />
                       <img
-                        src="./images/img-desctop-9.jpg"
+                        src="./images/img-mobile-9.jpg"
                         alt="an example of a banking app"
                       />
                     </picture>
